feat: small improvements

--- a/public/index.html
+++ b/public/index.html
@@ -34,35 +34,12 @@
                             required
                             aria-describedby="profile-hint"
                         >
-                        <button type="button" class="copy-btn" aria-label="Copy profile URL">
-                            <svg viewBox="0 0 16 16" fill="currentColor">
-                                <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/>
-                                <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"/>
-                            </svg>
-                        </button>
+
                     </div>
                     <div id="profile-hint" class="input-hint">Must be a public Steam profile</div>
                 </div>
 
-                <div class="input-group">
-                    <label for="bgUrl">Background Image URL</label>
-                    <div class="input-wrapper">
-                        <input 
-                            type="url" 
-                            id="bgUrl" 
-                            placeholder="https://example.com/image.jpg"
-                            required
-                            aria-describedby="bg-hint"
-                        >
-                        <button type="button" class="copy-btn" aria-label="Copy background URL">
-                            <svg viewBox="0 0 16 16" fill="currentColor">
-                                <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/>
-                                <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"/>
-                            </svg>
-                        </button>
-                    </div>
-                    <div id="bg-hint" class="input-hint">Direct link to an image file</div>
-                </div>
+
 
                 <!-- Background Gallery -->
                 <div class="bg-gallery-section">
@@ -127,7 +104,7 @@
                                 <line x1="12" y1="17" x2="12" y2="21"/>
                             </svg>
                             <h3>Ready to Preview</h3>
-                            <p>Enter your Steam profile URL and background image URL, then click "Preview" to see how it looks.</p>
+                            <p>Enter your Steam profile URL and select a background from the gallery to see how it looks.</p>
                         </div>
 
                         <div class="skeleton" id="skeleton">
